tests/examples/failing/overloadedlabelsrun04.hs.bad
{-# LANGUAGE OverloadedLabels, TemplateHaskell #-}

import OverloadedLabelsRun04_A





#!notashellscript

-- But this one is:
-- a # sign in Haskell? None of these are overloaded labels:





#foo
